<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Abbey</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hr">Heart Rate</string>
    <string name="rr">Respiration Rate</string>
    <string name="temp">Temperature</string>
    <string name="post">Posture</string>
    <string name="acc">Peak Acceleration</string>
    <string name="prof">Profile Picture</string>
    <string name="strtService">Start Service</string>
    <string name="stpService">Stop Service</string>
    <string name="username">Email Id</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>

</resources>
