<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".VitalActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/prof"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/acc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignParentBottom="true"
        android:text="@string/acc" />

    <Button
        android:id="@+id/post"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/acc"
        android:layout_alignLeft="@+id/acc"
        android:layout_marginBottom="32dp"
        android:text="@string/post" />

    <Button
        android:id="@+id/temp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/post"
        android:layout_alignLeft="@+id/post"
        android:layout_marginBottom="30dp"
        android:text="@string/temp" />

    <Button
        android:id="@+id/hr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="21dp"
        android:text="@string/hr" />

    <Button
        android:id="@+id/rr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/temp"
        android:layout_below="@+id/hr"
        android:layout_marginTop="29dp"
        android:text="@string/rr" />

</RelativeLayout>
